-Add auth guard for main routes.

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,8 @@
     <div class="container">        
             <a class="navbar-brand" routerLink='/' routerLinkActive='active'>DateSeeker App</a>
             
-              <ul class="navbar-nav me-auto" *ngIf="accountService.currentUser$ | async">
+              <ul class="navbar-nav me-auto" >
+               <ng-container *ngIf="accountService.currentUser$ | async">
                 <li class="nav-item">
                   <a class="nav-link" routerLink='/members' routerLinkActive='active' >Matches</a>
                 </li>
@@ -15,6 +16,8 @@
                 <li class="nav-item">
                   <a class="nav-link" (click)="logout()" href="#">Logout</a>
                 </li>
+               </ng-container>
+               
               </ul>
               
               <div class="dropdown" *ngIf="accountService.currentUser$| async" dropdown>
