--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,15 +1,51 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]='registerForm' (ngSubmit)="register()" autocomplete="off">
+    <!-- <form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off"> -->
     <h2 class="text-center text-primary">
         Sign up
     </h2>
     <div class="form-group">
-        <input type="text" class="form-control" name="username" [(ngModel)]="model.username"
-        placeholder="Username"  />
+        <!-- <input type="text" class="form-control" name="username" [(ngModel)]="model.username"
+        placeholder="Username"  /> -->
+        <input 
+            [class.is-invalid]='registerForm.get("username")!.errors 
+                && registerForm.get("username")!.touched'
+            type="text" 
+            class="form-control" 
+            formControlName='username' 
+            placeholder="Username"  />
+        <div class="invalid-feedback">
+            Please enter a username
+        </div>
         
     </div>
     <div class="form-group">
-        <input type="password" class="form-control" name="password" [(ngModel)]="model.password" 
-        placeholder="Password"  />
+        <!-- <input type="password" class="form-control" name="password" [(ngModel)]="model.password" 
+        placeholder="Password"  /> -->
+        <input 
+            [class.is-invalid]='registerForm.get("password")!.errors 
+                && registerForm.get("password")!.touched'
+            type="password" 
+            class="form-control" 
+            formControlName='password' 
+            placeholder="Password"  />
+        <div *ngIf='registerForm.get("password")!.errors' class="invalid-feedback">
+            <span *ngFor='let item of (getObjectKeys(registerForm.get("password")!.errors))'>
+                {{item}}
+            </span>
+        </div>
+    </div>
+    <div class="form-group">
+        <!-- <input type="password" class="form-control" name="password" [(ngModel)]="model.password" 
+        placeholder="Password"  /> -->
+        <input 
+            [class.is-invalid]='registerForm.get("password")!.errors 
+                && registerForm.get("password")!.touched'
+            type="password" 
+            class="form-control" 
+            formControlName='confirmPassword' 
+            placeholder="Password"  />
+        <div *ngIf="registerForm.get('confirmPassword')!.hasError('isMatching')" 
+        class="invalid-feedback">Passwords must match</div>
     </div>
     <!-- <div class="form-group">
         <label>Who is your favorite user?</label>
@@ -24,4 +60,5 @@
         <button class="btn btn-default mr-2" (click)="cancel()" type="button">Cancel</button>
     </div>
 
+    <p>IS VALID: {{registerForm.valid}}</p>
 </form>
