--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -3,50 +3,13 @@
     <h2 class="text-center text-primary">
         Sign up
     </h2>
-    <div class="form-group">
-        <!-- <input type="text" class="form-control" name="username" [(ngModel)]="model.username"
-        placeholder="Username"  /> -->
-        <input 
-            [class.is-invalid]='registerForm.get("username")!.errors 
-                && registerForm.get("username")!.touched'
-            type="text" 
-            class="form-control" 
-            formControlName='username' 
-            placeholder="Username"  />
-        <div class="invalid-feedback">
-            Please enter a username
-        </div>
-        
-    </div>
-    <div class="form-group">
-        <!-- <input type="password" class="form-control" name="password" [(ngModel)]="model.password" 
-        placeholder="Password"  /> -->
-        <input 
-            [class.is-invalid]='registerForm.get("password")!.errors 
-                && registerForm.get("password")!.touched'
-            type="password" 
-            class="form-control" 
-            formControlName='password' 
-            placeholder="Password"  />
-        <div *ngIf='registerForm.get("password")!.errors' class="invalid-feedback">
-            <span *ngFor='let item of (getObjectKeys(registerForm.get("password")!.errors))'>
-                {{item}}
-            </span>
-        </div>
-    </div>
-    <div class="form-group">
-        <!-- <input type="password" class="form-control" name="password" [(ngModel)]="model.password" 
-        placeholder="Password"  /> -->
-        <input 
-            [class.is-invalid]='registerForm.get("password")!.errors 
-                && registerForm.get("password")!.touched'
-            type="password" 
-            class="form-control" 
-            formControlName='confirmPassword' 
-            placeholder="Password"  />
-        <div *ngIf="registerForm.get('confirmPassword')!.hasError('isMatching')" 
-        class="invalid-feedback">Passwords must match</div>
-    </div>
+    
+    <!-- Here we use the $any() parser to allow the formControl and type to receive the parameters without complaining,
+    the other way is disable the "templateStrict" value in tsconfig.json but not recommended -->
+    <app-text-input [formControl]='$any(registerForm.controls["username"])' [label]='"Username"' ></app-text-input>
+    <app-text-input [formControl]='$any(registerForm.controls["password"])' [label]='"Password"' [type]='$any("password")' ></app-text-input>
+    <app-text-input [formControl]='$any(registerForm.controls["confirmPassword"])' [label]='"Confirm Password"' [type]='$any("password")' ></app-text-input>
+    
     <!-- <div class="form-group">
         <label>Who is your favorite user?</label>
         <select class="form-control">
