--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]='registerForm' (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]='registerForm' (ngSubmit)="registerForm.valid && register()" autocomplete="off">
     <!-- <form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off"> -->
     <h2 class="text-center text-primary">
         Sign up
@@ -6,10 +6,53 @@
     
     <!-- Here we use the $any() parser to allow the formControl and type to receive the parameters without complaining,
     the other way is disable the "templateStrict" value in tsconfig.json but not recommended -->
-    <app-text-input [formControl]='$any(registerForm.controls["username"])' [label]='"Username"' ></app-text-input>
-    <app-text-input [formControl]='$any(registerForm.controls["password"])' [label]='"Password"' [type]='$any("password")' ></app-text-input>
-    <app-text-input [formControl]='$any(registerForm.controls["confirmPassword"])' [label]='"Confirm Password"' [type]='$any("password")' ></app-text-input>
+    <div class="form-group">
+        <label class="control-label" style="margin-right: 10px;">I am a:</label>
+        <label class="radio-inline">
+            <input type="radio" value="male" formControlName='gender'> Male
+        </label>
+        <label class="radio-inline">
+            <input type="radio" value="female" formControlName='gender' class="ml-3"> Female
+        </label>
+    </div>
+    <app-text-input [formControl]='$any(registerForm.controls["username"])' 
+        [label]='"Username"' ></app-text-input>
+    <app-text-input [formControl]='$any(registerForm.controls["knownAs"])' 
+        [label]='"Known As"' ></app-text-input>
+    <app-date-input [formControl]='$any(registerForm.controls["dateOfBirth"])' 
+        [label]='"Date of Birth"' [maxDate]='maxDate' ></app-date-input>
+        
+    <!-- <div class="form-group">
+        <input type="text"
+            [class.is-invalid]='registerForm.get("dateOfBirth")!.touched && registerForm.get("dateOfBirth")!.invalid'
+            placeholder="Date of Birth"
+            class="form-control"
+            [formControl]='$any(registerForm.controls["dateOfBirth"])'
+            [bsConfig]='bsConfig'
+            [maxDate]='maxDate'
+            bsDatepicker>
+            <div *ngIf="registerForm.get('dateOfBirth')!.errors?.required" class="invalid-feedback" >
+                Date of birth is required
+            </div>
+    </div> -->
+
+    <app-text-input [formControl]='$any(registerForm.controls["city"])' 
+        [label]='"City"' ></app-text-input>
+    <app-text-input [formControl]='$any(registerForm.controls["country"])' 
+        [label]='"Country"' ></app-text-input>
+    <app-text-input [formControl]='$any(registerForm.controls["password"])' 
+        [label]='"Password"' [type]='$any("password")' ></app-text-input>
+    <app-text-input [formControl]='$any(registerForm.controls["confirmPassword"])' 
+        [label]='"Confirm Password"' [type]='$any("password")' ></app-text-input>
     
+
+        <div class="row" *ngIf="validationErrors.length > 0">
+            <ul class="text-danger">
+                <li *ngFor="let error of validationErrors">
+                    {{error}}
+                </li>
+            </ul>
+        </div>
     <!-- <div class="form-group">
         <label>Who is your favorite user?</label>
         <select class="form-control">
@@ -19,9 +62,10 @@
         </select>
     </div> -->
     <div class="form-group text-center">
-        <button class="btn btn-success mr-2" type="submit">Register</button>
+        <button class="btn btn-success mr-2" [disabled]='!registerForm.valid' type="submit">Register</button>
         <button class="btn btn-default mr-2" (click)="cancel()" type="button">Cancel</button>
     </div>
 
     <p>IS VALID: {{registerForm.valid}}</p>
+    <p>{{registerForm.value | json}}</p>
 </form>
