Adding sorting funtionality to frontend, date and timeago formatting pipes.

--- a/client/src/app/member/member-list/member-list.component.html
+++ b/client/src/app/member/member-list/member-list.component.html
@@ -23,7 +23,28 @@
 
         <button class="btn btn-primary ml-1" type="submit">Apply Filters</button>
         <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit">Reset Filters</button>
+        
+        <div class="col">
+            <div class="btn-group float-right">
+                <button 
+                    type="button"
+                    class="btn btn-primary" 
+                    (click)="loadMembers()"
+                    [(ngModel)]="userParams.orderBy"
+                    name='orderBy'
+                    btnRadio='lastActive'>Last Active</button>
     
+                    <button 
+                    type="button"
+                    class="btn btn-primary" 
+                    (click)="loadMembers()"
+                    [(ngModel)]="userParams.orderBy"
+                    name='orderBy'
+                    btnRadio='created'>Newest Members</button>
+    
+            </div>
+        </div>
+        
     </form>
 </div>
 
